B'H Add mission collaboration room actions
