# geelooy/api/tunnel/control/docs/actions.js
@@ -264,6 +264,13 @@ const actions = [
   "microPatchPlanner",
   "minimalReproGenerator",
   "missionAddTask",
+  "missionAgentAudit",
+  "missionAgentClaim",
+  "missionAgentComplete",
+  "missionAgentDelegate",
+  "missionAgentHeartbeat",
+  "missionAgentMessage",
+  "missionAgentSync",
   "missionAnswer",
   "missionAttachJob",
   "missionAuto",
@@ -292,6 +299,9 @@ const actions = [
   "missionNextPlan",
   "missionPlanDelta",
   "missionPostCompletion",
+  "missionProjectInvite",
+  "missionProjectJoin",
+  "missionProjectStatus",
   "missionQuestion",
   "missionRefrigerate",
   "missionReport",
